# brentclark-freecodecamp-api_integration_course_modern_python_with_fastapi

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: precommit.yaml  pylint.yml
app/: crud.py  database.db  db.py  main.py  models.py  schemas.py  utils.py
app/templates/: index.html
