[project]
name = "brentclark-freecodecamp-api-integration-course-modern-python-with-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[all]>=0.115.6",
    "gunicorn>=23.0.0",
    "icecream>=2.1.3",
    "jinja2>=3.1.5",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
]
